--- a/alcs-frontend/src/app/features/board/dialogs/modification/modification-dialog.component.scss
+++ b/alcs-frontend/src/app/features/board/dialogs/modification/modification-dialog.component.scss
@@ -30,6 +30,14 @@
 
 .card-title {
   margin-right: 2rem !important;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.labels {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .icon {
