--- a/alcs-frontend/src/app/shared/application-header/application-header.component.scss
+++ b/alcs-frontend/src/app/shared/application-header/application-header.component.scss
@@ -15,6 +15,23 @@
     margin-bottom: 16px;
   }
 
+  .title {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
+  .labels {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -8px;
+    margin-left: 8px;
+
+    app-application-type-pill {
+      margin-top: 8px;
+    }
+  }
+
   .sub-heading {
     margin-top: 16px;
     margin-bottom: 8px;
