--- a/alcs-frontend/src/app/features/application/application-meeting/application-meeting-dialog/application-meeting-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/application-meeting/application-meeting-dialog/application-meeting-dialog.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-title>
-  <h2 class="card-title">Edit {{ meetingType?.label }}</h2>
+  <h2 class="card-title">Edit {{ meetingType.label }}</h2>
 </div>
 <form (ngSubmit)="onSubmit()" [formGroup]="form">
   <mat-dialog-content style="height: 100%">
