--- a/portal-frontend/src/app/features/edit-application/edit-application.component.scss
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.scss
@@ -1,94 +1,3 @@
-// @import '../../../styles/typography';
-// @import '../../../styles/functions';
-
-// .header {
-//   margin: 2em 0;
-//   display: flex;
-//   justify-content: space-between;
-//   flex-flow: row wrap;
-
-//   h6 {
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//   }
-
-//   .change-app-type-btn-wrapper {
-//     margin: rem(16) 0;
-
-//     .mat-icon {
-//       vertical-align: middle;
-//       margin-left: rem(8);
-//       width: rem(20);
-//       height: rem(20);
-//       font-size: rem(22);
-//     }
-//   }
-
-//   @media screen and (min-width: $tabletBreakpoint) {
-//     .mat-icon {
-//       margin-left: rem(16);
-//       font-size: rem(24);
-//       width: rem(24);
-//       height: rem(24);
-//     }
-//   }
-// }
-
-// .form-row {
-//   display: grid;
-//   grid-template-columns: 1fr;
-//   grid-column-gap: 4%;
-
-//   @media screen and (min-width: $desktopBreakpoint) {
-//     & {
-//       grid-template-columns: 1fr 1fr;
-//     }
-//   }
-// }
-
-// .full-width-input {
-//   width: 100%;
-// }
-
-// .documents {
-//   margin-top: 0.5em;
-// }
-
-// .step-buttons {
-//   margin-top: 3em;
-//   display: flex;
-//   justify-content: space-between;
-// }
-
-// :host::ng-deep {
-//   .mat-horizontal-content-container {
-//     padding: 0;
-//   }
-
-//   .mat-step-header .mat-step-icon-selected {
-//     color: #fff;
-//   }
-
-//   .mat-step-header .mat-step-label.mat-step-label-active {
-//     display: none;
-//   }
-
-//   .mat-step-label {
-//     display: none;
-//   }
-
-//   @media screen and (min-width: $tabletBreakpoint) {
-//     .mat-step-header .mat-step-label.mat-step-label-active {
-//       display: inherit;
-//     }
-
-//     .mat-step-label {
-//       display: inherit;
-//     }
-//   }
-// }
-
 @import '../../../styles/typography';
 @import '../../../styles/functions';
 
@@ -383,7 +292,7 @@
 
   .flex-evenly-wrap {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-wrap: wrap;
   }
 }
