--- a/portal-frontend/src/app/features/edit-application/edit-application.component.scss
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.scss
@@ -36,6 +36,13 @@
 }
 
 :host::ng-deep {
+  .step-description {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-row-gap: rem(24);
+    margin-bottom: rem(32);
+  }
+
   .mat-icon.mat-icon-inline {
     line-height: initial;
   }
