--- a/portal-frontend/src/app/features/edit-application/parcel-details/parcel-details.component.html
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/parcel-details.component.html
@@ -3,15 +3,16 @@
     <h3>Identify Parcels Under Application</h3>
     <p>Provide parcel identification and registered ownership information for each parcel under application.</p>
   </div>
-  <mat-expansion-panel
-    [expanded]="parcelInd === parcels.length - 1"
-    *ngFor="let parcel of parcels; let parcelInd = index"
-  >
+  <mat-expansion-panel *ngFor="let parcel of parcels; let parcelInd = index">
     <mat-expansion-panel-header>
       <mat-panel-title> Parcel #{{ parcelInd + 1 }} Details & Owner Information </mat-panel-title>
     </mat-expansion-panel-header>
 
-    <app-parcel-entry (onFormGroupChange)="onParcelFormChange($event)" [parcel]="parcel"></app-parcel-entry>
+    <app-parcel-entry
+      [parcel]="parcel"
+      (onFormGroupChange)="onParcelFormChange($event)"
+      (onFilesUpdated)="loadParcels()"
+    ></app-parcel-entry>
 
     <div>
       <div class="flex-evenly-wrap">
