--- a/portal-frontend/src/app/features/edit-application/select-government/select-government.component.html
+++ b/portal-frontend/src/app/features/edit-application/select-government/select-government.component.html
@@ -25,7 +25,7 @@
         </mat-autocomplete>
       </mat-form-field>
     </div>
-    <app-warning-banner>
+    <app-warning-banner class="full-row">
       This Local/First Nation Government has not yet been set up with the ALC Portal to receive applications. To submit,
       you will need to contact the ALC directly: &nbsp;<a href="mailto:ALC.Portal@gov.bc.ca">ALC.Portal@gov.bc.ca</a
       >&nbsp;/&nbsp;<a href="tel:236-468-3342">236-468-3342</a>
