--- a/portal-frontend/src/app/features/edit-application/parcel-details/owner-entry/owner-entry.component.html
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/owner-entry/owner-entry.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="type">
     <h6>Select owner type:</h6>
-    <mat-radio-group class="radio-row" aria-label="Select a parcel type">
+    <mat-radio-group class="radio-row" aria-label="Select a owner type">
       <mat-radio-button value="individual">Individual</mat-radio-button>
       <mat-radio-button value="organization">Organization</mat-radio-button>
     </mat-radio-group>
@@ -9,27 +9,33 @@
   <form [formGroup]="ownerForm">
     <div class="form-row">
       <div>
-        <label for="map-area">First Name</label>
+        <label for="firstName">First Name</label>
         <mat-form-field class="full-width-input" appearance="outline">
-          <input id="map-area" type="number" matInput placeholder="Enter First Name" formControlName="firstName" />
+          <input id="firstName" matInput placeholder="Enter First Name" formControlName="firstName" />
         </mat-form-field>
       </div>
       <div>
-        <label for="pin">Last Name</label>
+        <label for="lastName">Last Name</label>
         <mat-form-field class="full-width-input" appearance="outline">
-          <input id="pin" type="number" matInput placeholder="Enter Last Name" formControlName="lastName" />
+          <input id="lastName" matInput placeholder="Enter Last Name" formControlName="lastName" />
         </mat-form-field>
       </div>
       <div>
-        <label for="pin">Phone Number</label>
+        <label for="phoneNumber">Phone Number</label>
         <mat-form-field class="full-width-input" appearance="outline">
-          <input id="pin" type="number" matInput placeholder="Enter Phone Number" formControlName="phoneNumber" />
+          <input
+            id="phoneNumber"
+            type="string"
+            matInput
+            placeholder="Enter Phone Number"
+            formControlName="phoneNumber"
+          />
         </mat-form-field>
       </div>
       <div>
-        <label for="pin">Email</label>
+        <label for="email">Email</label>
         <mat-form-field class="full-width-input" appearance="outline">
-          <input id="pin" type="number" matInput placeholder="Enter Email" formControlName="email" />
+          <input id="email" type="email" matInput placeholder="Enter Email" formControlName="email" />
         </mat-form-field>
       </div>
     </div>
