Feature/alcs 348 part 1 (#332)
Application step 1a

--- a/portal-frontend/src/app/features/edit-application/edit-application.component.html
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.html
@@ -13,6 +13,7 @@
 <mat-stepper class="review-application" linear="true" #stepper>
   <mat-step label="Parcel Details">
     <ng-container *ngTemplateOutlet="header"></ng-container>
+    <app-parcel-details [$application]="$application"></app-parcel-details>
   </mat-step>
   <mat-step label="Other Parcels in the Community">
     <ng-container *ngTemplateOutlet="header"></ng-container>
