--- a/portal-frontend/src/app/features/edit-application/edit-application.component.scss
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.scss
@@ -2,7 +2,7 @@
 @import '../../../styles/functions';
 
 .header {
-  margin: 2em 0;
+  margin: rem(24) 0;
   display: flex;
   justify-content: space-between;
   flex-flow: row wrap;
@@ -35,35 +35,29 @@
   }
 }
 
-.form-row {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-column-gap: 4%;
-
-  @media screen and (min-width: $desktopBreakpoint) {
-    & {
-      grid-template-columns: 1fr 1fr;
-    }
-  }
-}
-
-.full-width-input {
-  width: 100%;
-}
-
-.documents {
-  margin-top: 0.5em;
-}
-
-.step-buttons {
-  margin-top: 3em;
-  display: flex;
-  justify-content: space-between;
-}
-
 :host::ng-deep {
+  .step-description {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-row-gap: rem(24);
+    margin-bottom: rem(32);
+  }
+
+  .mat-icon.mat-icon-inline {
+    line-height: initial;
+  }
+
   .mat-horizontal-content-container {
     padding: 0;
+    min-height: 100%;
+  }
+
+  .mat-horizontal-stepper-wrapper {
+    min-height: 100%;
+  }
+
+  .subtext {
+    margin: rem(8) 0 !important;
   }
 
   .mat-step-header .mat-step-icon-selected {
@@ -78,6 +72,21 @@
     display: none;
   }
 
+  .section {
+    margin: rem(24) 0;
+  }
+
+  .date-picker {
+    ::ng-deep.mat-form-field-infix {
+      display: flex;
+      padding: rem(3) 0;
+    }
+  }
+
+  .mat-button-wrapper {
+    white-space: break-spaces;
+  }
+
   @media screen and (min-width: $tabletBreakpoint) {
     .mat-step-header .mat-step-label.mat-step-label-active {
       display: inherit;
@@ -86,5 +95,211 @@
     .mat-step-label {
       display: inherit;
     }
+  }
+
+  .review-step {
+    min-height: 100%;
+  }
+
+  .mobile-hidden {
+    display: none;
+
+    @media screen and (min-width: $tabletBreakpoint) {
+      display: contents;
+    }
+  }
+
+  .tablet-hidden {
+    display: contents;
+
+    @media screen and (min-width: $tabletBreakpoint) {
+      display: none;
+    }
+  }
+
+  .mat-button-toggle-appearance-standard .mat-button-toggle-label-content {
+    line-height: rem(33);
+  }
+
+  .mat-button-toggle-checked.mat-button-toggle-appearance-standard {
+    background-color: $primary-color-light;
+  }
+
+  .review-application {
+    .description {
+      margin-top: rem(12);
+      margin-bottom: rem(20);
+      display: flex;
+      flex-direction: column;
+
+      div {
+        display: flex;
+        align-items: center;
+      }
+
+      .save-button {
+        margin-top: rem(16) !important;
+        width: 100%;
+      }
+
+      @media screen and (min-width: $tabletBreakpoint) {
+        flex-direction: row;
+        justify-content: space-between;
+
+        .save-button {
+          margin-left: rem(12) !important;
+          margin-top: unset !important;
+          width: unset;
+        }
+      }
+    }
+
+    .form-row {
+      margin-top: rem(16);
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-column-gap: rem(30);
+      grid-row-gap: rem(6);
+
+      @media screen and (min-width: $tabletBreakpoint) {
+        grid-row-gap: rem(24);
+      }
+
+      @media screen and (min-width: $desktopBreakpoint) {
+        & {
+          grid-template-columns: 1fr 1fr;
+        }
+
+        .full-row {
+          grid-column: 1/3;
+        }
+      }
+    }
+
+    .input {
+      margin-top: rem(5);
+      width: 100%;
+
+      .mat-button-toggle {
+        width: 100%;
+      }
+    }
+
+    .button-container {
+      margin-top: rem(40);
+      display: flex;
+      flex-direction: column-reverse;
+      justify-content: space-between;
+
+      @media screen and (min-width: $tabletBreakpoint) {
+        flex-direction: row;
+        justify-content: space-between;
+      }
+
+      div {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: rem(8);
+
+        @media screen and (min-width: $tabletBreakpoint) {
+          display: flex;
+          justify-content: space-between;
+        }
+
+        button {
+          margin-bottom: rem(24) !important;
+
+          @media screen and (min-width: $tabletBreakpoint) {
+            margin-left: rem(24) !important;
+            margin-bottom: 0 !important;
+          }
+        }
+      }
+    }
+  }
+
+  // parcel entry details
+  .float-right {
+    float: right;
+  }
+
+  .container {
+    margin: rem(20) 0 rem(20) 0;
+  }
+
+  .type {
+    margin-bottom: rem(30);
+  }
+
+  .pmbc-search {
+    border: 1px solid $primary-color-dark;
+    border-radius: rem(4);
+    background-color: rgba($accent-color-light, 0.2);
+    padding: rem(16);
+  }
+
+  .form-row {
+    margin-top: rem(16);
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-column-gap: rem(30);
+
+    @media screen and (min-width: $desktopBreakpoint) {
+      & {
+        grid-template-columns: 1fr 1fr 1fr;
+      }
+
+      .full-row {
+        grid-column: 1/4;
+      }
+    }
+  }
+
+  .radio-row {
+    margin: rem(10) 0;
+    display: block;
+
+    .mat-radio-button {
+      margin-right: rem(12);
+    }
+  }
+
+  .search-buttons {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+
+    button {
+      margin: 0 rem(16) 0 0 !important;
+    }
+  }
+
+  .full-width-input {
+    margin-top: rem(5);
+    width: 100%;
+  }
+
+  .mat-expansion-panel {
+    margin-bottom: rem(16);
+  }
+
+  .mat-checkbox {
+    display: flex;
+    justify-content: center;
+    .mat-checkbox-layout {
+      white-space: break-spaces;
+    }
+  }
+
+  .flex-center-wrap {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .flex-evenly-wrap {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
   }
 }
