--- a/portal-frontend/src/styles/form-controls.scss
+++ b/portal-frontend/src/styles/form-controls.scss
@@ -31,6 +31,14 @@ label {
   padding-bottom: 0;
 }
 
+.mat-mdc-form-field-subscript-wrapper {
+  height: 0;
+}
+
+.mat-mdc-form-field-infix {
+  min-height: unset;
+}
+
 //This prevents the bottom of the text from being cut off
 .mat-mdc-form-field .mat-form-field-label-wrapper label {
   line-height: 1.2;
@@ -40,7 +48,11 @@ label {
   line-height: 1.2;
 }
 
-.mat-form-field-appearance-outline .mat-mdc-form-field-infix {
+.mat-mdc-dialog-container .mdc-dialog__content {
+  color: inherit !important;
+}
+
+.mat-form-field-appearance-outline .mat-form-field-infix {
   padding: rem(6) 0;
 
   @media screen and (min-width: $tabletBreakpoint) {
@@ -61,4 +73,50 @@ input.mat-input-element::placeholder {
 
 input.mat-input-element:disabled::placeholder {
   color: $grey;
+}
+
+form {
+  .form-row {
+    margin-top: rem(16);
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-column-gap: rem(30);
+    grid-row-gap: rem(6);
+
+    @media screen and (min-width: $tabletBreakpoint) {
+      grid-row-gap: rem(24);
+    }
+
+    @media screen and (min-width: $desktopBreakpoint) {
+      & {
+        grid-template-columns: 1fr 1fr;
+      }
+
+      .full-row {
+        grid-column: 1/3;
+      }
+    }
+
+    .mat-form-field, .mat-mdc-form-field {
+      margin-top: rem(5);
+      width: 100%;
+
+      .mat-button-toggle {
+        width: 100%;
+      }
+    }
+  }
+
+  .input {
+    margin-top: rem(5);
+    width: 100%;
+
+    .mat-button-toggle {
+      width: 100%;
+    }
+  }
+}
+
+.mdc-list-item__primary-text {
+  width: 100%;
 }
