--- a/portal-frontend/src/app/shared/warning-banner/warning-banner.component.html
+++ b/portal-frontend/src/app/shared/warning-banner/warning-banner.component.html
@@ -2,7 +2,7 @@
   <div class="icon">
     <mat-icon>info</mat-icon>
   </div>
-  <div class="description">
+  <div class="warning-description">
     <ng-content></ng-content>
   </div>
 </div>
