--- a/portal-frontend/src/app/shared/warning-banner/warning-banner.component.scss
+++ b/portal-frontend/src/app/shared/warning-banner/warning-banner.component.scss
@@ -8,7 +8,7 @@
   margin: 2.4rem 0;
   align-items: center;
 
-  .description {
+  .warning-description {
     min-width: 0;
     word-break: break-word;
   }
