--- a/portal-frontend/src/app/features/edit-application/parcel-details/parcel-details.component.html
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/parcel-details.component.html
@@ -3,7 +3,10 @@
     <h3>Identify Parcels Under Application</h3>
     <p>Provide parcel identification and registered ownership information for each parcel under application.</p>
   </div>
-  <mat-expansion-panel *ngFor="let parcel of parcels; let parcelInd = index">
+  <mat-expansion-panel
+    *ngFor="let parcel of parcels; let parcelInd = index"
+    [expanded]="parcels.length === 1 || (newParcelAdded && parcelInd === parcels.length - 1)"
+  >
     <mat-expansion-panel-header>
       <mat-panel-title> Parcel #{{ parcelInd + 1 }} Details & Owner Information </mat-panel-title>
     </mat-expansion-panel-header>
@@ -11,15 +14,16 @@
     <app-parcel-entry
       [parcel]="parcel"
       (onFormGroupChange)="onParcelFormChange($event)"
-      (onFilesUpdated)="loadParcels()"
+      (onFilesUpdated)="onFilesUpdated()"
     ></app-parcel-entry>
 
     <div>
-      <div class="flex-evenly-wrap">
-        <button mat-stroked-button color="primary" (click)="onSave()">
+      <div class="flex-evenly-wrap parcel-buttons-wrappers">
+        <button class="margin-top-1-half" mat-stroked-button color="primary" (click)="onSave()">
           Save Parcel #{{ parcelInd + 1 }} Details & Owner Information
         </button>
         <button
+          class="margin-top-1-half"
           *ngIf="parcels.length > 1"
           mat-stroked-button
           color="accent"
