--- a/portal-frontend/src/app/features/edit-application/parcel-details/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/parcel-entry/parcel-entry.component.html
@@ -54,7 +54,7 @@
     <div>
       <label for="pid">PID</label>
       <mat-form-field class="full-width-input" appearance="outline">
-        <input id="pid" matInput placeholder="Enter PID" formControlName="pid" />
+        <input id="pid" matInput placeholder="Enter PID" formControlName="pid" mask="000-000-000" />
       </mat-form-field>
     </div>
 
@@ -69,7 +69,7 @@
       <label for="purchaseDate">Parcel Purchase Date (Fee Simple only)</label>
       <mat-form-field class="full-width-input date-picker" appearance="outline">
         <input matInput [matDatepicker]="purchaseDate" formControlName="purchaseDate" />
-        <mat-hint>MM/DD/YYYY</mat-hint>
+        <mat-hint>YYYY-MMM-DD</mat-hint>
         <mat-datepicker-toggle matIconSuffix [for]="purchaseDate"></mat-datepicker-toggle>
         <mat-datepicker #purchaseDate startView="year"></mat-datepicker>
       </mat-form-field>
