--- a/alcs-frontend/src/app/shared/header/search-bar/search-bar.component.scss
+++ b/alcs-frontend/src/app/shared/header/search-bar/search-bar.component.scss
@@ -9,16 +9,20 @@
   .mat-icon {
     font-size: 125%;
   }
+
+  ::ng-deep .mat-mdc-form-field-subscript-wrapper {
+    position: absolute;
+  }
 }
 
 input {
   color: $white;
 }
 
-.mat-input-element {
-  color: #fff;
+.mat-mdc-input-element {
+  color: #fff !important;
   &::placeholder {
-    color: $grey-light;
+    color: $grey-light !important;
     letter-spacing: 0.5px;
   }
 }
