search outlined, app card view, buttons

--- a/alcs-frontend/src/app/shared/card/card.component.scss
+++ b/alcs-frontend/src/app/shared/card/card.component.scss
@@ -106,9 +106,13 @@ $date-ht: 48px;
   height: 110px;
 }
 
-mat-card.decision-date {
-  border-top: none;
-  height: calc($card-ht + $date-ht);
+mat-card {
+  padding: 16px;
+  
+  .decision-date {
+    border-top: none;
+    height: calc($card-ht + $date-ht);
+  }
 }
 
 .ellipsis {
