--- a/alcs-frontend/src/styles/ngselect.scss
+++ b/alcs-frontend/src/styles/ngselect.scss
@@ -1,5 +1,9 @@
 // Not ng-select styles must be overridden in global css
 
+.ng-select {
+  bottom: auto;
+}
+
 .ng-select.subtask-assignee .ng-select-container {
   .ng-value-container {
     margin-top: 15px;
