no space wrap on button text, application detail header fix

--- a/alcs-frontend/src/app/shared/application-type-pill/application-type-pill.component.scss
+++ b/alcs-frontend/src/app/shared/application-type-pill/application-type-pill.component.scss
@@ -1,6 +1,7 @@
 .application-pill-wrapper {
   display: inline-block;
   height: 25px;
+  white-space: nowrap;
 
   .application-pill {
     margin-right: 12px;
